[project]
name = "kakao-real-estate"
version = "0.1.0"
description = "카카오 부동산 MCP 서버 - 실거래가 조회, 매물 검색, 중간 지점 추천"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kakao-real-estate = "kakao_real_estate.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kakao_real_estate"]
